row break fix on mobile

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -10,6 +10,7 @@ ow-hero-list {
         white-space: nowrap;
     }
     li {
+        height: 24vw;
         list-style-type: none;
         margin: 0 ;
         padding: 0.5rem;
@@ -20,7 +21,6 @@ ow-hero-list {
             max-width:100%;
         }
         p{
-            min-height: 1.10vw *4;
             font-size: 1.10vw;
         }
     }
